<resources>
    <string name="app_name">Tailor My Day</string>
    <string name="action_settings">Settings</string>
    <string name="landing_page_fragment_label">Home</string>
    <string name="journal_fragment_label">Journal</string>
    <string name="goals_fragment_label">Goals Checklist</string>
    <string name="calories_fragment_label">Calorie Tracking</string>
    <string name="exercise_fragment_label">Exercise Log</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="landing_page_fragment">Landing Page</string>
    <string name="journal_fragment">Journal</string>
    <string name="goals_fragment">Goals</string>
    <string name="calories_fragment">Calories</string>
    <string name="exercise_fragment">Exercise</string>
    <string name="journal_text">entry for today</string>
    <string name="journal_button">Done</string>
</resources>