<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <Button
        android:id="@+id/button_journal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/journal_fragment_label"
        app:layout_constraintBottom_toTopOf="@id/button_goals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/button_goals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goals_fragment_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_journal"
        app:layout_constraintBottom_toTopOf="@id/button_calories" />
    <Button
        android:id="@+id/button_calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calories_fragment_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_goals"
        app:layout_constraintBottom_toTopOf="@id/button_exercise" />

    <Button
        android:id="@+id/button_exercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_fragment_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_calories" />
</androidx.constraintlayout.widget.ConstraintLayout>